# rust-datadog-logs

./: Cargo.toml
src/: main.rs
