[package]
name = "rust-kafka"
version = "0.1.0"
authors = ["Jason Martens <me@jasonmartens.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

#[dependencies]
#rdkafka = "0.17.0"

[dependencies.rdkafka]
version = "0.22"
features = ["cmake-build"]