[package]
name = "rust-kafka"
version = "0.1.0"
authors = ["Jason Martens <me@jasonmartens.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
futures = "0.1.21"
clap = "2.33.0"
log = "0.4.8"
chrono = "0.4.10"
env_logger = "0.7.1"
tokio = "0.1.7"
rand = "0.7.2"

[dependencies.rdkafka]
version = "0.22"
features = ["cmake-build"]

[dependencies.rdkafka-sys]
version = "1.2.1"
features = ["cmake-build"]
